--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "engines": {
     "node": "12.13.1",
-    "npm": "6.12.1"
+    "yarn": "1.21.0"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.8.4",
     "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/eslint-module": "^1.1.0",
     "nuxt": "^2.10.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
-    "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/vuetify": "^1.9.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
