--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sibox-client",
+  "name": "richardsonrisk",
   "version": "1.0.0",
-  "description": "NuxtJs frontend for Sibox",
+  "description": "NuxtJs frontend for RichardsonRisk",
   "author": "Guenton Brooks",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-module": "^1.1.0",
+    "@nuxtjs/proxy": "^1.3.3",
     "nuxt": "^2.10.2"
   },
   "devDependencies": {
